--- a/static/index.html
+++ b/static/index.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная страница</title>
+    <style>
+        .centerBox {
+            margin: 0 auto;
+            background: gray;
+            padding: 15px;
+            width: 400px;
+            height: 600px;
+        }
+    </style>
 </head>
 <body>
 
-<h1>Главная страница</h1>
-<hr>
-<br>
-<br>
+<div class = "centerBox">
+
+</div>
+
+<script src="src/main.js"></script>
 
 </body>
 </html>
